3/31/22
Main features:
  Add support for directly adding new cards to the realtime database from the website
  Modified cards1.service.ts, adc-card.component.html, and add-card.component.ts

3/24/22
Main features:
  Implemented a Firebase server to host the website
  Changed HTTP reliance in cards1.service.ts
  

3/10/22
Main features:
  Replaced mock_card_list.ts with a backend server list.
  Created cards1.service.ts to communicate with the website.
  Replace the ngFor loop in home-layout.component.ts with ngOnInIt.

3/3/22
Main features:
  Implemented chegg-user-info.component using data from a backend server.

2/24/22
Main features: 
  Added components to read and sell layouts: "jumbotron4", "jumbotron5", "Cardrow3", "Cardrow4"
  Created 2 new mock card lists for the new card rows: "mock_card3_list.ts", "mock_card4_list.ts"
  Figured out how to stretch the jumbotron images but they still arent the right size.


2/17/22
Main features:
  Created routing components : "home", "book-rent&buy", "books-read", "books-return", and "books-sell"
  Used flex-row and flex-col to style home page layout.
  
Bonus features: 
  Created jumbotron components that will be properly implemented later.
  