@@ -7,6 +7,7 @@ import { BooksReadLayoutComponent } from './routingcomponents/books-read-layout.
 import { BooksReturnLayoutComponent } from './routingcomponents/books-return-layout.component';
 import { BooksSellLayoutComponent } from './routingcomponents/books-sell-layout.component';
 import { AddCardComponent } from './app/add-card/add-card.component';
+import { AuthenticationComponent } from './auth/authentication/authentication.component';
 
 const routes:Routes = [
   {path: '', component: HomeLayoutComponent},
@@ -15,7 +16,8 @@ const routes:Routes = [
   {path: 'books-read', component:BooksReadLayoutComponent},
   {path: 'books-return', component:BooksReturnLayoutComponent},
   {path: 'books-sell', component:BooksSellLayoutComponent},
-  {path: 'admin', component: AddCardComponent}
+  {path: 'admin', component: AddCardComponent},
+  {path: 'auth', component: AuthenticationComponent}
 
 
 ];
